--- a/.github/workflows/rust-checks.yaml
+++ b/.github/workflows/rust-checks.yaml
@@ -3,8 +3,12 @@ name: Rust CI
 on:
   push:
     branches: [main]
+    paths:
+      - "**.rs"
   pull_request:
     branches: ["**"]
+    paths:
+      - "**.rs"
 
 env:
   CARGO_TERM_COLOR: always
@@ -25,20 +29,38 @@ jobs:
         uses: actions/cache@v4
         id: cargo_cache
         with:
-          key: cargo2-${{ hashFiles('Cargo.lock', '**/Cargo.toml') }}
           path: |
-            ~/.cargo/bin
-            ~/.cargo/git
-            ~/.cargo/registry
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: ${{ runner.os }}-cargo-
 
-      - name: Format with rustfmt
+      - name: Format with `cargo rustfmt`
+        continue-on-error: true
         run: cargo fmt --all -- --check
 
-      - name: Lint with clippy
+      - name: Lint with `cargo clippy`
+        continue-on-error: true
         run: cargo clippy --all --all-features --tests -- -D warnings
 
-      - name: Cargo test
+      - name: Unit Test with `cargo test`
+        continue-on-error: true
         run: cargo test --all-features --verbose
 
-      - name: Cargo build
+      - name: Build with `cargo build`
+        continue-on-error: true
         run: cargo build --release
+
+        # OUTDATED=$(cargo outdated --format json | jq -r '.[].newest.version' | grep -vE '^(dev-dependencies|unknown)$')
+      - name: Warn outdated dependencies with `cargo outdated`
+        run: |
+          set +e
+          OUTDATED=$(cargo update --dry-run | grep -vE '^(Updating|Downloading|Compiling)')
+          if [ -n "$OUTDATED" ]; then
+            echo "::warning ::The following dependencies are outdated:"
+            echo "$OUTDATED"
+          fi
+          exit 0
