--- a/.github/workflows/rust-checks.yaml
+++ b/.github/workflows/rust-checks.yaml
@@ -60,15 +60,21 @@ jobs:
 
       - name: Unused Dependencies Check
         continue-on-error: true
-        run: cargo +nightly udeps
+        run: |
+          rustup toolchain install nightly
+          cargo +nightly udeps
+
+      - name: Outdated Dependencies Check
+        continue-on-error: true
+        run: cargo outdated --format json
 
         # OUTDATED=$(cargo outdated --format json | jq -r '.[].newest.version' | grep -vE '^(dev-dependencies|unknown)$')
-      - name: Warn for outdated dependencies
-        run: |
-          set +e
-          OUTDATED=$(cargo update --dry-run)
-          if [ -n "$OUTDATED" ]; then
-            echo "::warning ::The following dependencies are outdated:"
-            echo "$OUTDATED"
-          fi
-          exit 0
+      # - name: Warn for outdated dependencies
+      #   run: |
+      #     set +e
+      #     OUTDATED=$(cargo update --dry-run)
+      #     if [ -n "$OUTDATED" ]; then
+      #       echo "::warning ::The following dependencies are outdated:"
+      #       echo "$OUTDATED"
+      #     fi
+      #     exit 0
