reunite as steps with some running even on previous failure

--- a/.github/workflows/rust-checks.yaml
+++ b/.github/workflows/rust-checks.yaml
@@ -6,148 +6,49 @@ on:
     paths:
       - "**.rs"
   pull_request:
+    types: [opened, reopened, ready_for_review, synchronize]
     branches: ["**"]
     # paths:
     # - "**.rs"
 
-env:
-  CARGO_TERM_COLOR: always
-
 jobs:
   vulnerability:
     runs-on: ubuntu-latest
+    timeout-minutes: 2
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - name: Cache ~/.cargo
-        uses: actions/cache@v4
-        id: cargo_cache
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
-      - run: cargo audit
-
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Cache ~/.cargo
-        uses: actions/cache@v4
-        id: cargo_cache
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
-      - run: cargo fmt --all -- --check
-
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Cache ~/.cargo
-        uses: actions/cache@v4
-        id: cargo_cache
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
-      - run: cargo clippy --all --all-features --tests -- -D warnings
-
-  unit-tests:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Cache ~/.cargo
-        uses: actions/cache@v4
-        id: cargo_cache
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
-      - run: cargo test --all-features --verbose
-
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Cache ~/.cargo
-        uses: actions/cache@v4
-        id: cargo_cache
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
-      - run: cargo build --release
-
-  outdated-dependencies:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Cache ~/.cargo
-        uses: actions/cache@v4
-        id: cargo_cache
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
-      - run: cargo outdated --format json
-
-  check-unused-dependencies:
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    timeout-minutes: 1
-    steps:
-      - uses: actions/checkout@v4
+      # - uses: Swatinem/rust-cache@v2
       - uses: actions/cache@v4
+        id: cargo_cache
         with:
           path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-cargo-
-      - uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: nightly
-      - name: Installs cargo-udeps
-        run: cargo install --force cargo-udeps
-      - name: Run cargo udeps
-        run: cargo udeps
+
+      - name: vulnerabilities
+        run: cargo audit
+
+      - name: format
+        if: always()
+        run: cargo fmt --all -- --check
+
+      - name: release build
+        if: always()
+        run: cargo build --release
+
+      - name: lints
+        run: cargo clippy --all --all-features --tests -- -D warnings
+
+      - name: unit tests
+        run: cargo test --all-features --verbose
+
+      - name: outdated dependencies
+        if: always()
+        run: cargo outdated --format json
+
+      - name: unused dependencies (warn)
+        continue-on-error: true
+        run: cargo machete
