fixed small error

--- a/.github/workflows/rust-checks.yaml
+++ b/.github/workflows/rust-checks.yaml
@@ -12,7 +12,7 @@ on:
     # - "**.rs"
 
 jobs:
-  vulnerability:
+  ci:
     runs-on: ubuntu-latest
     timeout-minutes: 2
     steps:
@@ -50,5 +50,6 @@ jobs:
         run: cargo outdated --format json
 
       - name: unused dependencies (warn)
+        if: always()
         continue-on-error: true
         run: cargo machete
