--- a/.github/workflows/ci-pr.yaml
+++ b/.github/workflows/ci-pr.yaml
@@ -2,7 +2,7 @@ name: Rust CI
 
 on:
   pull_request:
-    types: [opened, reopened, ready_for_review, synchronize]
+    types: [ready_for_review, synchronize]
     branches: ["**"]
     paths:
       - "**.rs"
