--- a/.github/workflows/ci-main.yaml
+++ b/.github/workflows/ci-main.yaml
@@ -4,25 +4,21 @@ on:
   push:
     branches:
       - 20-enhance-update-to-self-hosted-actions-runners
+
 jobs:
-  ci:
-    runs-on:
-      - self-hosted
-    timeout-minutes: 5
+  prepare:
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      # - uses: Swatinem/rust-cache@v2
       - uses: actions/cache@v4
-        id: cargo_cache
         with:
           path: |
             ~/.cargo/registry
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Display informations (rust, cargo)
+      - name: Display information (rust, cargo)
         shell: bash
         run: |
           rustup -V
@@ -30,34 +26,66 @@ jobs:
           rustup default
           cargo -V
           rustc -V
-
-      - name: vulnerabilities
+      - name: Prepare workspace
         run: |
-          cargo install cargo-audit
-          cargo audit
+          cargo fetch
+      - name: Create workspace artifact
+        run: tar czf workspace.tar.gz .
+      - uses: actions/upload-artifact@v3
+        with:
+          name: workspace
+          path: workspace.tar.gz
 
-      - name: format
-        if: always()
+  security:
+    needs: prepare
+    runs-on: self-hosted
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: workspace
+      - run: tar xzf workspace.tar.gz
+      - name: Check vulnerabilities
+        run: cargo audit
+
+  code_quality:
+    needs: prepare
+    runs-on: self-hosted
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: workspace
+      - run: tar xzf workspace.tar.gz
+      - name: Check formatting
         run: cargo fmt --all -- --check
-
-      - name: release build
-        if: always()
-        run: cargo build --release
-
-      - name: lints
+      - name: Run lints
         run: cargo clippy --all --all-features --tests -- -D warnings
 
-      - name: unit tests
+  build_and_test:
+    needs: prepare
+    runs-on: self-hosted
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: workspace
+      - run: tar xzf workspace.tar.gz
+      - name: Release build
+        run: cargo build --release
+      - name: Run unit tests
         run: cargo test --all-features --verbose
 
-      - name: outdated dependencies
-        if: always()
+  dependency_checks:
+    needs: prepare
+    runs-on: self-hosted
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: workspace
+      - run: tar xzf workspace.tar.gz
+      - name: Check outdated dependencies
         run: |
           cargo install cargo-outdated
           cargo outdated --format json
-
-      - name: unused dependencies (warn)
-        if: always()
+      - name: Check unused dependencies
         continue-on-error: true
         run: |
           cargo install cargo-machete
