--- a/.github/workflows/ci-main.yaml
+++ b/.github/workflows/ci-main.yaml
@@ -16,6 +16,8 @@ jobs:
       - self-hosted
     container:
       image: ghcr.io/ryse-rs/gh_runner_rust:latest
+      options: --user root
+
     timeout-minutes: 5
     steps:
       - uses: actions/checkout@v4
