--- a/.github/workflows/ci-main.yaml
+++ b/.github/workflows/ci-main.yaml
@@ -21,8 +21,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - uses: mozilla-actions/sccache-action@v0.0.5
-      - uses: Swatinem/rust-cache@v2
+      # - uses: mozilla-actions/sccache-action@v0.0.5
+      # - uses: Swatinem/rust-cache@v2
+      - uses: actions/cache@v4
+        id: cargo_cache
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
       - name: Display informations (rust, cargo)
         shell: bash
         run: |
