--- a/.github/workflows/ci-main.yaml
+++ b/.github/workflows/ci-main.yaml
@@ -1,4 +1,4 @@
-name: Rust CI (merge on main)
+name: Rust CI
 
 on:
   pull_request:
@@ -19,13 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
-      - uses: actions/cache@v4
-        id: cargo_cache
-        with:
-          path: |
-            ~/.cargo
-            ./target
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - uses: Swatinem/rust-cache@v2
 
       - name: Install dependencies
         run: |
@@ -49,7 +43,7 @@ jobs:
         run: cargo build --release
 
       - name: unit tests
-        run: cargo test --all-features --verbose
+        run: cargo test --all-features
 
       - name: format
         if: ${{ ! cancelled() }}
@@ -61,7 +55,7 @@ jobs:
 
       - name: outdated dependencies
         if: ${{ ! cancelled() }}
-        run: cargo outdated --format json
+        run: cargo outdated
 
       - name: unused dependencies (warn)
         if: ${{ ! cancelled() }}
