--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = "1.0.114"
 lazy_static = "1.4.0"
 
 [features]
-default = ["time", "date", "datetime"]
+default = []
 full = ["time", "date", "datetime"]
 time = []
 date = []
