--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,19 @@
 version: 2
+
 updates:
   - package-ecosystem: "cargo"
     directory: "/"
+    registries: "*"
     schedule:
       interval: "weekly"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "weekly"
+
+registries:
+  ryse-rs-kellnr:
+    type: cargo-registry
+    registry: kellnr
+    url: https://kellnr.ryse.ovh/api/v1/cargo
+    token: ${{ secrets.PUBLISH_REGISTRY_TOKEN }}
