--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,14 @@
-[package]
-name = "span"
+[workspace]
+members = ["span"]
+resolver = "2"
+
+[workspace.package]
 version = "1.0.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-chrono = { version = "0.4.35", features = ["serde"] }
-serde = { version = "1.0.197", features = ["derive"] }
-thiserror = "2.0.3"
-serde_json = "1.0.114"
-
-[features]
-default = ["time", "date", "datetime"]
-full = ["time", "date", "datetime"]
-time = []
-date = []
-datetime = []
+edition = "2024"
+authors = ["ZialeHub", "gpoblon"]
+readme = "README.md"
+license-file = "NOTICE"
+documentation = "https://kellnr.ryse.ovh/span"
+homepage = "https://kellnr.ryse.ovh/span"
+repository = "https://github.com/ryse-rs/span"
+publish = ["kellnr"]
