--- a/span/Cargo.toml
+++ b/span/Cargo.toml
@@ -1,21 +1,20 @@
 [package]
 name = "span"
 description = "Ergonomic time handling (and traveling!) library with builder patterns, custom formatting, and seamless serialization for Date, Time, and DateTime operations"
-documentation.workspace = true
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+readme.workspace = true
+license-file.workspace = true
 homepage.workspace = true
 repository.workspace = true
-publish.workspace = true
-readme.workspace = true
-authors.workspace = true
-edition.workspace = true
-license-file.workspace = true
-version.workspace = true
+keywords.workspace = true
 
 [dependencies]
-chrono = { version = "0.4.35", features = ["serde"] }
-serde = { version = "1.0.197", features = ["derive"] }
-thiserror = "2.0.3"
-serde_json = "1.0.114"
+chrono = { version = "0.4.42", features = ["serde"] }
+serde = { version = "1.0.228", features = ["derive"] }
+thiserror = "2.0.17"
+serde_json = "1.0.145"
 
 [features]
 default = ["time", "date", "datetime"]
